--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-window": "^1.8.10",
     "socket.io-client": "^4.7.4",
     "sort-by": "^0.0.2"
   },
