--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,10 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
-    "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "nodemon": "^3.0.3"
   }
 }
